--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,46 @@
-<ul>
-  {{#each uneaten}}
-  <li>
-    <p>{{burger_name}}</p>
-    <button data-id="{{id}}" class="devour">Eat Me</button>
-    <button data-id="{{id}}" class="del">Remove</button>
-  </li>
-  {{/each}}
-</ul>
+<div class="container ">
+  <div class="row">
+    <div class="col s12 center-align">
+      <img src="/img/burger.png" alt="Burger image" class="h-200 responsive-img">
+    </div>
+  </div>
+  <div class="row flex">
+    <div class="col s6 light-green darken-1">
+      <h3>Burgers Available</h3>
+      <ul>
+        {{#each uneaten}}
+        <li>
+          <p>{{burger_name}}</p>
+          <button data-id="{{id}}" class="devour">Eat Me</button>
+          <button data-id="{{id}}" class="del">Remove</button>
+        </li>
+        {{/each}}
+      </ul>
+    </div>
+    <div class="col s6 brown lighten-1">
+      <h3>Burgers Eaten</h3>
+      <ul>
+        {{#each eaten}}
+        <li>
+          <p>{{burger_name}}</p>
+          <button data-id="{{id}}" class="del">Remove</button>
+        </li>
+        {{/each}}
+      </ul>
 
-<ul>
-  {{#each eaten}}
-  <li>
-    <p>{{burger_name}}</p>
-    <button data-id="{{id}}" class="del">Remove</button>
-  </li>
-  {{/each}}
-</ul>
+    </div>
+  </div>
+  <div class="row center-align yellow lighten-2">
+    <div class="col s12">
+      <h4>Add a Burger</h4>
+      <form class="create-burger">
+
+        <div class="form-group">
+          <input type="text" id="burger" name="burger">
+        </div>
+
+        <button type="submit">Add Burger</button>
+      </form>
+    </div>
+  </div>
+</div>
